Trying a more generic way to manage DirectBuffer cleaning.