@@ -2,6 +2,9 @@ package org.rrd4j.core;
 
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.nio.ByteBuffer;
 import java.nio.MappedByteBuffer;
 import java.nio.channels.FileChannel;
 import java.util.concurrent.ScheduledFuture;
@@ -14,21 +17,50 @@ import sun.misc.Unsafe;
  * using java.nio.* package. This is the default backend engine.
  *
  */
+@SuppressWarnings("restriction")
 public class RrdNioBackend extends RrdRandomAccessFileBackend {
 
-    /**
-     * Provide access to sun.misc.Unsafe::invokeCleaner
-     */
+    // The java 8- methods
+    private static final Method cleanerMethod;
+    private static final Method cleanMethod;
+    // The java 9+ methods
+    private static final Method invokeCleaner;
     private static final Unsafe unsafe;
     static {
+        // Temporary variable, because destinations variables are final
+        // And it interfere with exceptions
+        Method cleanerMethodTemp;
+        Method cleanMethodTemp;
+        Method invokeCleanerTemp;
+        Unsafe unsafeTemp;
         try {
+            // The java 8- way, using sun.nio.ch.DirectBuffer.cleaner().clean()
+            Class<?> directBufferClass = RrdNioBackend.class.getClassLoader().loadClass("sun.nio.ch.DirectBuffer");
+            Class<?> cleanerClass = RrdNioBackend.class.getClassLoader().loadClass("sun.misc.Cleaner");
+            cleanerMethodTemp = directBufferClass.getMethod("cleaner");
+            cleanerMethodTemp.setAccessible(true);
+            cleanMethodTemp = cleanerClass.getMethod("clean");
+            cleanMethodTemp.setAccessible(true);
+        } catch (ClassNotFoundException | NoSuchMethodException | SecurityException e) {
+            cleanerMethodTemp = null;
+            cleanMethodTemp = null;
+        }
+        try {
+            // The java 9+ way, using unsafe.invokeCleaner(buffer)
             Field singleoneInstanceField = Unsafe.class.getDeclaredField("theUnsafe");
             singleoneInstanceField.setAccessible(true);
-            unsafe = (Unsafe) singleoneInstanceField.get(null);
+            unsafeTemp = (Unsafe) singleoneInstanceField.get(null);
+            invokeCleanerTemp = unsafeTemp.getClass().getMethod("invokeCleaner", ByteBuffer.class);
         } catch (NoSuchFieldException | SecurityException
-                | IllegalArgumentException | IllegalAccessException e) {
-            throw new UnsupportedOperationException("Unusable sun.misc.Unsafe", e);
+                | IllegalArgumentException | IllegalAccessException
+                | NoSuchMethodException e) {
+            invokeCleanerTemp = null;
+            unsafeTemp = null;
         }
+        cleanerMethod = cleanerMethodTemp;
+        cleanMethod = cleanMethodTemp;
+        invokeCleaner = invokeCleanerTemp;
+        unsafe = unsafeTemp;
     }
 
     private MappedByteBuffer byteBuffer;
@@ -83,16 +115,20 @@ public class RrdNioBackend extends RrdRandomAccessFileBackend {
         }
     }
 
-    /**
-     * This version only works in Java9+ (see https://bugs.openjdk.java.net/browse/JDK-8171377)
-     */
     private void unmapFile() {
-        if (byteBuffer != null) {
-            if (byteBuffer.isDirect()) {
-                unsafe.invokeCleaner(byteBuffer);
+        if (byteBuffer != null && byteBuffer.isDirect()) {
+            try {
+                if (cleanMethod != null) {
+                    Object cleaner = cleanerMethod.invoke(byteBuffer);
+                    cleanMethod.invoke(cleaner);
+                } else {
+                    invokeCleaner.invoke(unsafe, byteBuffer);
+                }
+            } catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
+                throw new RuntimeException(ex);
             }
-            byteBuffer = null;
         }
+        byteBuffer = null;
     }
 
     /**
